force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Display_Setting__mdt/ucinn_ascendv2__Gift_Processing_Display_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Customizes the visibility of the fields in Gift Processing</description>
    <label>Gift Processing Display Setting</label>
    <pluralLabel>Gift Processing Display Settings</pluralLabel>
</CustomObject>