force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Display_Setting__mdt/fields/ucinn_ascendv2__Aura_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Aura_ID__c</fullName>
    <description>Aura ID for controlling field or section visibility. Fields are formatted as SObject_Field, and Sections are formatted as Section.(Section_Name).</description>
    <inlineHelpText>Aura ID for controlling field or section visibility. Fields are formatted as SObject_Field, and Sections are formatted as Section.(Section_Name).</inlineHelpText>
    <label>Aura ID</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>