force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Display_Setting__mdt/fields/ucinn_ascendv2__Display_Conditions__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Display_Conditions__c</fullName>
    <inlineHelpText>Enter an expression that evaluates to true or false. If true, field will be displayed, otherwise field is hidden. If left blank, defaults to true. Operators are: &amp;&amp;, ||, ==, !=, &lt;, &lt;=, &gt;, &gt;=, (, ), ===. See documentation for variables that can be used.</inlineHelpText>
    <label>Display Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>