force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Display_Setting__mdt/fields/ucinn_ascendv2__Enable_Field__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the field to be visible on the Gift Processing pages.</description>
    <label>Enable Field</label>
    <type>Checkbox</type>
</CustomField>