force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Display_Setting__mdt/fields/ucinn_ascendv2__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_API_Name__c</fullName>
    <defaultValue>&quot;DEPRECATED&quot;</defaultValue>
    <description>The API name of the field.</description>
    <label>Field API Name (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>