force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Display_Setting__mdt/fields/ucinn_ascendv2__SObject__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SObject__c</fullName>
    <defaultValue>&quot;DEPRECATED&quot;</defaultValue>
    <description>The SObject directly associated with the field.</description>
    <label>SObject (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>